--- a/blog-1/package.json
+++ b/blog-1/package.json
@@ -2,11 +2,15 @@
   "name": "blog-1",
   "version": "1.0.0",
   "description": "",
-  "main": "src/main.js",
+  "main": "bin/www.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development nodemon ./bin/www.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.0"
+  }
 }
